# gpp_action_examples

./: CMakeLists.txt  package.xml
cpp/: spot_body_pose.cpp  vision_start_frame_tf2.cpp
launch/: frame_runner_launch.py  square_frames.launch.py
python/gpp_action_examples/: audio_action_server.py  avoid_holes_mapper.py  frontier_exploration_action_server.py  gpp_trajectory.py  move_circle_as.py  move_circle_client.py  pose_saver.py  print_srv_server.py
resource/: frame_runner.gpp
